added code to HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
+    <title>Nico's Prework Study Guide</title>
   </head>
   <body>
     <header id="top">
@@ -12,7 +12,47 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML stands for Hypertext Markup Language</li>
+          <li>The head element contains the metadata for the web application</li>
+          <li>The body element represents the visible content shown to the end user</li>
+          <li>The title element defines the title of the webpage</li>
+          <li>The meta element defines the metadata such as the character set description, key words, author and viewpoint</li>
+          <li>All elements start with an opening and closing tag</li>
+          </li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>CSS stands for Cascading Style Sheets</li>
+          <li>CSS is a computer language used for laying out and structuring webpages in HTML</li>
+          <li>CSS describes how HTML elements should be shown on screen</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+     <ul>
+       <li>Git is an Open Source, cloud-based platform used for version control</li>
+       <li>It allows developers to store, manage and collaborate on code</li>
+       <li>You can use SSH Keys to use github without entering a password every time you interact with it</li>
+       <li>You can use the Command Line Interface (CLI) called Gitbash to interact with git locally from your PC</li>
+       <li>git status: checks what branch we are currently on</li>
+       <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+     </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+     <ul>
+       <li>Javascript is a scripting language that allows you to add multimedia elements such as animations and videos to webpages using code</li>
+       <li>It is needed to make a lot of web pages functional </li>
+     </ul>
+      </section>
     </main>
 
     <footer>
