--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Nico's Prework Study Guide</title>
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -31,6 +33,8 @@
           <li>CSS stands for Cascading Style Sheets</li>
           <li>CSS is a computer language used for laying out and structuring webpages in HTML</li>
           <li>CSS describes how HTML elements should be shown on screen</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
       </section>
    
@@ -50,7 +54,7 @@
         <h2>JavaScript</h2>
      <ul>
        <li>Javascript is a scripting language that allows you to add multimedia elements such as animations and videos to webpages using code</li>
-       <li>It is needed to make a lot of web pages functional </li>
+       <li>It is needed to make a static HTMS/CSS webpage interactive e.g. buttons, drop down menus and hover functions</li>
      </ul>
       </section>
     </main>
@@ -58,5 +62,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
