--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
     <title>Nico's Prework Study Guide</title>
   </head>
   <body>
@@ -51,6 +53,8 @@
      <ul>
        <li>Javascript is a scripting language that allows you to add multimedia elements such as animations and videos to webpages using code</li>
        <li>It is needed to make a lot of web pages functional </li>
+       <li>A variable is a named container that allows us to store data in our code.</li>
+       <li>Control flow is the order in which a computer executes code in a script.</li>
      </ul>
       </section>
     </main>
